# slsg

./: .gitignore  Cargo.toml  README.md
example/: article.lmk  article.luamark  index.lua  index.lua.html  main.lua  markdown.lua.md  meta.lua  minimark.lua.mmk  site.conf  site.toml  style.css  style.scss  test.lua.html
example/content/: index.lua
example/content/blog/: index.lua  post.md  post2.lua
example/highlighting/: custom.toml
example/scripts/: bibliography.lua  components.lua  markdown.lua  templates.lua
example/site/: code.md  index.lua  index.md  main.md  math.md  references.bib
example/site/blog/: index.lua  post.md  post2.lua
example/static/: references.bib
example/styles/: style.scss
example/templates/: page.html
examples/project-site/: .gitignore  index.lua.md  markdown.lua.md  site.conf  site.lua  style.css  style.scss
examples/project-site/scripts/: main.lua  templates.lua
examples/project-site/templates/: page.html
examples/template-fennel/: index.fnl.md  site.fnl
examples/template-fennel/posts/: first.fnl.md
examples/template-fennel/templates/: index.html
examples/template-lua/: .gitignore  index.lua.md  site.conf  site.lua  style.scss
examples/template-lua/posts/: first.lua.md
examples/template-lua/scripts/: main.lua
examples/template-lua/templates/: page.html
old/: api.lua  generate.lua  main.lua
src/: assets.rs  conf.rs  docs.rs  error_template.html  file.rs  filetree.rs  font.rs  generate.rs  highlight.rs  html.rs  lib.lua  luamark.rs  main.lua  main.rs  markdown.rs  mdl.rs  message.rs  minimark.rs  new.lmk  new.lua  not_found_template.html  path.rs  pretty_print.rs  print.rs  serve.rs  sitefiles.rs  sitetree.rs  stdlib.lua  stdlib.rs  style.scss  subset.rs  syntaxes.lua  templates.rs  texparse.rs  update_notify.html
src/api/: directory.rs  file.rs  globals.rs  highlight.rs  languages.toml  lib.lua  markdown.rs  mod.rs  page.rs  script.rs  styles.rs  tex.rs
src/cmd/: generate.rs  mod.rs  serve.rs  update_notify.html
src/cookbook/: manual_markdown.lua  mod.rs
template/: article.lmk  main.lua  meta.lua  style.scss
