[package]
name = "slsg"
description = "Scriptable Lua Site Generator"
version = "0.4.0"
license = "GPL-3.0-only"
repository = "https://github.com/Dimev/slsg"
keywords = ["lua", "website", "html", "blog", "markdown"]
categories = ["web-programming", "template-engine", "command-line-utilities"]
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ctrlc = "3.4.7"
glob = "0.3.2"
hb-subset = "0.3.0"
latex2mathml = "0.2.3"
mlua = { version = "0.10.0", features = ["luajit", "macros"] }
notify = "8.0.0"
pico-args = "0.5.0"
pulldown-cmark = "0.13.0"
relative-path = "2.0.1"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"]}
unicode-width = "0.2.0"

