[package]
name = "slsg"
description = "Scriptable Lua Site Generator"
version = "0.4.0"
license = "GPL-3.0-only"
repository = "https://github.com/Dimev/slsg"
keywords = ["lua", "website", "html", "blog", "markdown"]
categories = ["web-programming", "template-engine", "command-line-utilities"]
edition = "2024"

[dependencies]
codemap = "0.1.3"
crossterm = "0.29.0"
ctrlc = "3.4.7"
flate2 = "1.1.1"
glob = "0.3.2"
grass = { version = "0.13.4", default-features = false }
hb-subset = "0.3.0"
html5ever = "0.31.0"
image = "0.25.6"
latex2mathml = "0.2.3"
mlua = { version = "0.10.0", features = ["luajit", "macros"] }
notify = "8.0.0"
pico-args = "0.5.0"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
relative-path = "2.0.1"
resvg = "0.45.1"
tiny-skia = "0.11.4"
unicode-width = "0.2.0"
usvg = "0.45.1"

